# crosstem

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
crosstem/: __init__.py  analyzer.py  download.py  etymology_linker.py  exceptions.py  inflection_analyzer.py  stemmer.py
crosstem/data/: cat_derivations.json  hbs_derivations.json  mon_derivations.json  por_derivations.json  swe_derivations.json
docs/source/: algorithm.rst  api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  languages.rst  quickstart.rst  user_guide.rst
scripts/: build_all_languages.py  preprocess.py  preprocess_etymology.py  preprocess_inflections.py
tests/: benchmark_stemming.py  test_comprehensive.py  test_without_etymology.py
