[build-system]
requires = ["setuptools>=61.0,<77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crosstem"
version = "0.2.0"
description = "Comprehensive morphological analysis: derivational stemming, inflectional analysis, and cross-lingual etymology"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Avinash Bhojanapalli", email = "bhojanapalliavinash@gmail.com"}
]
keywords = [
    "nlp", "morphology", "stemming", "derivation", "inflection", "lemmatization",
    "etymology", "linguistics", "morphynet", "unimorph", "cross-lingual", "wiktionary"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/droidmaximus/crosstem"
Repository = "https://github.com/droidmaximus/crosstem"
Documentation = "https://crosstem.readthedocs.io/en/latest/"

[tool.setuptools]
packages = ["crosstem"]
include-package-data = true

[tool.setuptools.package-data]
crosstem = [
    "data/*.json",
]
